# winforge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  check-updates.yml  ci.yml  on-push-products.yml  release.yml
autounattend/: README.md  base.xml  oobe-skip.xml  win11-25h2.xml
bypass/: README.md
bypass/win11-24h2/: .gitkeep
config/: accounts.yaml.example  editions.yaml  products.yaml
config/profiles/: win10-legacy.yaml  win11-ent.yaml  win11-ltsc.yaml  win11-min.yaml  win11-prod.yaml
docs/: bypass.md  gofile.md
scripts/drivers/: sync_intel_rst.py
scripts/gofile/: upload.py
scripts/lib/: log.py  sha.py  yaml.py
scripts/profiles/: load.py
scripts/rclone/: assign.py  upload.sh
scripts/uupd/: diff.py  download.py  resolve.py  scrape.py
tests/: test_assign.py  test_autounattend_bypass.py  test_build_pipeline.py  test_bypass_policy.py  test_bypass_win11.py  test_diff.py  test_download.py  test_e2e_build.py  test_gofile.py  test_inject_autounattend.py  test_iso_bootability.py  test_matrix.py  test_profiles.py  test_repack_uefi.py  test_resolve.py  test_scrape.py  test_sync_intel_rst.py  test_verify_iso_bootable.py  test_yaml_roundtrip.py
tests/fixtures/: known_uup.html
