[project]
name = "winforge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
    "requests>=2.32.4",
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.18",
    "mypy>=2.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["scripts*", "tests*"]

[tool.mypy]
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
